Getting rid of some garbage

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ hw1/src/matlab/hw_elevator.slx
 hw2/hw2_hvac_SettingControlChart.png
 hw2/hw2_hvac_SettingControlChart.eps
 hw2/hw2_hvac_SettingControlChart.psc
+
+*.odg#
